--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
-  repo: DeanGodfree/financial-literacy
+  repo: pierabll/financial-literacy
   branch: main
-  site_domain: genuine-dasik-5f0f83.netlify.app
+  site_domain: incredible-sfogliatella-2dbd00.netlify.app
   commit_messages:
     create: "Create {{collection}} “{{slug}}”"
     update: "Update {{collection}} “{{slug}}”"
